<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>one.microstream</groupId>
	<artifactId>bookstore-demo-jcon</artifactId>
	<version>1.0.0-SNAPSHOT</version>

	<name>MicroStream BookStore Demo</name>

	<licenses>
		<license>
			<name>MIT</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>

	<organization>
		<name>Microstream Software</name>
		<url>http://microstream.one</url>
	</organization>

	<developers>
		<developer>
			<name>Microstream Software</name>
			<url>http://microstream.one</url>
		</developer>
	</developers>

	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<eclipsestore.version>2.1.1</eclipsestore.version>
		<lucene.version>8.5.1</lucene.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.eclipse.store</groupId>
			<artifactId>storage-embedded</artifactId>
			<version>${eclipsestore.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.store</groupId>
			<artifactId>storage-embedded-configuration</artifactId>
			<version>${eclipsestore.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.serializer</groupId>
			<artifactId>persistence-binary-jdk8</artifactId>
			<version>${eclipsestore.version}</version>
		</dependency>
		<dependency>
			<groupId>org.javamoney.moneta</groupId>
			<artifactId>moneta-core</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-queryparser</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>29.0-jre</version>
		</dependency>
		<dependency>
			<groupId>org.rapidpm</groupId>
			<artifactId>rapidpm-logger-adapter</artifactId>
			<version>01.00.06-RPM</version>
		</dependency>
		<dependency>
			<groupId>com.github.javafaker</groupId>
			<artifactId>javafaker</artifactId>
			<version>1.0.1</version>
		</dependency>
	</dependencies>

</project>